# transformer-vm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: divergence_horizon.tsv  envelope_sizes_default_collatz.tsv  envelope_sizes_default_min_cost_matching.tsv  envelope_sizes_default_sudoku.tsv  envelope_sizes_max_ffn_32_collatz.tsv  envelope_sizes_max_ffn_32_min_cost_matching.tsv  envelope_sizes_max_ffn_32_sudoku.tsv  envelope_sizes_no_reuse_collatz.tsv  envelope_sizes_no_reuse_min_cost_matching.tsv  envelope_sizes_no_reuse_sudoku.tsv  envelope_sizes_summary.tsv  erase_propagation_default.tsv  erase_propagation_max_ffn_32.tsv  erase_propagation_no_reuse.tsv  issue10_investigation.md  issue18_investigation.md  issue6_investigation.md  issue7_investigation.md  issue9_investigation.md  phase_breakdown_all.tsv  real_model_default_collatz.tsv  real_model_default_mcm.tsv  real_model_default_sparsity.tsv  real_model_default_sudoku.tsv  real_model_max_ffn_32_collatz.tsv  real_model_max_ffn_32_mcm.tsv  real_model_max_ffn_32_sparsity.tsv  real_model_no_reuse_collatz.tsv  real_model_no_reuse_mcm.tsv  real_model_no_reuse_sparsity.tsv  real_model_small_collatz.tsv  real_model_small_mcm.tsv  real_model_summary.tsv  sweep.tsv  trulite_sweep.tsv  trulite_sweep_flops.tsv
scripts/: analyze_erase_propagation.py  bench.py  bench_real.py  bench_trulite.py  check_determinism.py  divergence_horizon.py  flops_normalize_trulite.py  make_synthetic_model.py  measure_envelope_sizes.py  measure_sparsity.py  model_flops.py  profile_phases.py  summarize_results.py
transformer_vm/: __init__.py  _paths.py  build.py  evaluator.py  runner.py  specialize.py
transformer_vm/attention/: CMakeLists.txt  __init__.py  hull2d_cht.h  hull_cache.py  hull_ext.cpp  standard_cache.py
transformer_vm/compilation/: __init__.py  compile_wasm.py
transformer_vm/examples/: lowering_test.c  manifest.yaml  min_cost_matching.c  sudoku.c
transformer_vm/graph/: __init__.py  core.py
transformer_vm/model/: __init__.py  transformer.cpp  transformer.py  weights.py
transformer_vm/scheduler/: __init__.py  milp.py
transformer_vm/tests/: conftest.py  test_distill.py  test_smoke.py  test_specialize.py
transformer_vm/wasm/: __init__.py  interpreter.py  reference.py
